# whaleapi-sdk

./: .gitignore  CMakeLists.txt  README.md  index.html
c/: CMakeLists.txt  Cargo.toml  Doxyfile  Makefile.toml  README.md  annotated.html  build.rs  cbindgen.toml  classes.html  dir_b6cae26084dee9dce718bea774b49ef2.html  dir_dfb40522c510869b08da8f8e2e259a6f.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  longportwhale_8h.html  longportwhale_8h_source.html  menudata.js  structlb__async__result__t.html  structlb__http__header__t.html  structlb__push__order__changed__t.html
c/crates/macros/: Cargo.toml
c/csrc/include/: longportwhale.h
c/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_a.js  variables_c.js
c/src/: async_call.rs  config.rs  error.rs  http_client.rs  lib.rs
c/src/trade_context/: context.rs  enum_types.rs  mod.rs  types.rs
c/src/types/: language.rs  market.rs  mod.rs
c/test/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt  Doxyfile  Makefile.toml  README.md  annotated.html  async__result_8hpp.html  async__result_8hpp_source.html  callback_8hpp.html  callback_8hpp_source.html  classes.html  classlongportwhale_1_1_config-members.html  classlongportwhale_1_1_config.html  classlongportwhale_1_1_decimal-members.html  classlongportwhale_1_1_decimal.html  classlongportwhale_1_1_http_client-members.html  classlongportwhale_1_1_http_client.html  classlongportwhale_1_1_status-members.html  classlongportwhale_1_1_status.html  classlongportwhale_1_1trade_1_1_trade_context-members.html  classlongportwhale_1_1trade_1_1_trade_context.html  config_8hpp.html  config_8hpp_source.html  decimal_8hpp.html  decimal_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  http__client_8hpp.html  http__client_8hpp_source.html  index.html  longportwhale_8hpp.html  longportwhale_8hpp_source.html  menudata.js  namespacelongportwhale.html  namespacelongportwhale_1_1callback.html  namespacelongportwhale_1_1trade.html  (+27 more)
cpp/include/: async_result.hpp  callback.hpp  config.hpp  decimal.hpp  http_client.hpp  longportwhale.hpp  push.hpp  status.hpp  trade_context.hpp  types.hpp
cpp/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_13.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+44 more)
cpp/src/: config.cpp  convert.hpp  decimal.cpp  http_client.cpp  status.cpp  trade_context.cpp  types.cpp  utils.hpp
cpp/static/: CMakeLists.txt
cpp/test/: CMakeLists.txt  main.cpp
examples/c/whale/: CMakeLists.txt  main.c
examples/cpp/whale/: CMakeLists.txt  main.cpp
examples/rust/http_client/: Cargo.toml
python/: 404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
python/config/: index.html
python/crates/macros/: Cargo.toml
python/docs/: config.md  reference_all.md  trade_context.md
python/pysrc/longportwhale/: __init__.py  openapi.pyi
python/reference_all/: index.html
python/search/: search_index.json
python/src/: config.rs  decimal.rs  error.rs  http_client.rs  lib.rs  time.rs  types.rs
python/src/trade/: context.rs  mod.rs  push.rs  types.rs
python/trade_context/: index.html
rust/: Cargo.toml  Makefile.toml  README.md  crates.js  help.html  settings.html  src-files.js
rust/crates/httpclient/: Cargo.toml
rust/crates/wsclient/: Cargo.toml
rust/longportwhale/: all.html  enum.Error.html  enum.Language.html  enum.Market.html  enum.SimpleError.html  index.html  macro.decimal.html  sidebar-items.js  struct.Config.html  struct.Decimal.html  type.Result.html
rust/longportwhale/config/: enum.Language.html  struct.Config.html
rust/longportwhale/error/: enum.Error.html  enum.SimpleError.html  type.Result.html
rust/longportwhale/trade/: enum.OrderSide.html  enum.OrderStatus.html  enum.OrderTag.html  enum.OrderType.html  enum.PushEvent.html  enum.TopicType.html  enum.TriggerStatus.html  index.html  sidebar-items.js  struct.PushOrderChanged.html  struct.TradeContext.html
rust/longportwhale/types/: enum.Market.html
rust/search.index/: 03ec660382cd.js  04e563024fef.js  06e6d8b3e7b4.js  093e9c29a420.js  09490d9efcc3.js  0c3da9bca295.js  11955bc6a880.js  17f549bf3f62.js  193f7f434346.js  24c4cb32e74e.js  2b1ca12411d1.js  2c557ec1b768.js  2ecc5ef2129d.js  32c7cc034e1f.js  34adc8d5495e.js  377a5bd0d5a5.js  3976377ae7d9.js  3c40b6c8738c.js  3e040b576e98.js  3f7ddcb8a7c8.js  40642ca2ca10.js  4251821ddd05.js  455f86208094.js  5954c6621ab1.js  5f686cf6a3ff.js  60404ae93c1a.js  60407bbd6aed.js  610c619f6e43.js  61567d3fb4de.js  65b8a3fcbdaf.js  6d5531f4f47d.js  72bc9c79de36.js  76bff5b64326.js  773bb721bbb2.js  7e804b2f49e1.js  root.js
rust/search.index/crateNames/: 650ec501adcd.js
rust/search.index/desc/: dbc90113857e.js
rust/search.index/entry/: 47ffffdc4506.js
rust/search.index/function/: 0333e7bdd761.js
rust/search.index/generic_inverted_index/: 6a2c66b4fb10.js
rust/search.index/name/: 98d0265e7a09.js
rust/search.index/normalizedName/: 80086b4d8e76.js
rust/search.index/path/: c2b8becc5063.js
rust/search.index/type/: 03ac76e88d34.js
rust/src/: config.rs  error.rs  lib.rs  macros.rs  serde_utils.rs
rust/src/blocking/: mod.rs  runtime.rs  trade.rs
rust/src/longportwhale/: config.rs.html  error.rs.html  (+4 more)
(+211 files in other folders)
