[package]
edition = "2021"
name = "longportwhale-c"
version = "1.0.0"
description = "WhaleAPI SDK for C"
homepage = "https://longbridgewhale.com/"
readme = "README.md"
repository = "https://github.com/longportapp/whaleapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longport", "whale", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
longportwhale = { path = "../rust" }
longportwhale-c-macros = { path = "crates/macros" }

rust_decimal = { version = "1.23.1", features = ["maths"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
once_cell = "1.12.0"
parking_lot = "0.12.1"
time = "0.3.9"

[build-dependencies]
cbindgen = "0.24.3"
