[package]
edition = "2021"
name = "longportwhale-python"
version = "1.0.0"
description = "Longbridge WhaleAPI SDK for Python"
homepage = "https://longbridgewhale.com/"
readme = "README.md"
repository = "https://github.com/longportapp/whaleapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longport", "whale", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
name = "longportwhale"
crate-type = ["cdylib"]

[dependencies]
longportwhale = { path = "../rust", features = ["blocking"] }
longportwhale-python-macros = { path = "crates/macros" }

once_cell = "1.11.0"
parking_lot = "0.12.1"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pythonize = "0.20.0"
rust_decimal = "1.23.1"
serde_json = "1.0.93"
time = "0.3.36"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }

[build-dependencies]
pyo3-build-config = "0.16.4"
