[project]
name = "longportwhale"
version = "1.0.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "A Python library for LongPort Open API"
readme = "README.md"
repository = "https://github.com/longportapp/whaleapi-sdk"
dependencies = []

[license]
text = "MIT OR Apache-2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.urls]
homepage = "https://longbridgewhale.com/"
repository = "https://github.com/longportapp/whaleapi-sdk"
changelog = "https://github.com/longportapp/whaleapi-sdk/blob/master/python/CHANGELOG.md"

[tool.maturin]
python-source = "pysrc"
