[package]
edition = "2021"
name = "longportwhale"
version = "1.0.0"
description = "Longbridge WhaleAPI SDK for Rust"
homepage = "https://longbridgewhale.com/"
readme = "README.md"
repository = "https://github.com/longportapp/whaleapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "whaleapi", "sdk"]
categories = ["api-bindings"]

[features]
blocking = ["flume"]

[dependencies]
longportwhale-wscli = { path = "crates/wsclient", version = "1.0.0" }
longportwhale-httpcli = { path = "crates/httpclient", version = "1.0.0" }
longport-proto = { version = "1.1.7" }

tokio = { version = "1.18.2", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "net",
] }
tokio-tungstenite = "0.21.0"
rust_decimal = { version = "1.23.1", features = ["serde-with-str", "maths"] }
num_enum = "0.7.0"
prost = "0.13"
tracing = "0.1.34"
bitflags = "2.4.1"
futures-util = "0.3.21"
time = { version = "0.3.9", features = ["parsing", "macros", "formatting"] }
flume = { version = "0.10.12", optional = true }
thiserror = "1.0.31"
strum = "0.24.0"
strum_macros = "0.24.0"
serde = "1.0.137"
serde_json = "1.0.81"
dotenv = "0.15.0"
http = "1.1.0"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
